fix: allows spacing between product cards

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -44,17 +44,6 @@
   text-align: center;
 }
 
-.carrousel-product .p-carousel .p-carousel-item {
-  flex: 0 0 auto !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  width: unset !important;
-}
-
-.carrousel-product .p-carousel .p-carousel-indicators {
-  padding: 0rem !important;
-}
-
 .carrousel-product {
   width: 100%;
 }
